# usta-cli

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  SECURITY.md  rustfmt.toml
.cursor/rules/: usta.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  template_proposal.md
.github/workflows/: ci.yml  release.yml
crates/usta-adapters/: Cargo.toml  README.md
crates/usta-adapters/proptest-regressions/: fs.txt
crates/usta-adapters/src/: clock.rs  fs.rs  lib.rs  renderer.rs
crates/usta-adapters/src/prompts/: inquire_ui.rs  mod.rs  noninteractive.rs
crates/usta-adapters/src/scanner/: ignore_scanner.rs
crates/usta-adapters/src/templates/: filesystem_source.rs
crates/usta-app/: Cargo.toml  README.md
crates/usta-app/src/: add.rs  lib.rs  list.rs  update.rs  verify.rs
crates/usta-app/src/extract/: mod.rs  service.rs  synthesizer.rs  writer.rs
crates/usta-app/src/scaffold/: mod.rs  plan_builder.rs  plan_executor.rs  service.rs  snapshot.rs
crates/usta-cli/: Cargo.toml  README.md
crates/usta-cli/src/: main.rs  wiring.rs
crates/usta-cli/src/commands/: add.rs  completions.rs  extract.rs  list.rs  mod.rs  new.rs  schema.rs  update.rs  verify.rs
crates/usta-cli/tests/: add_command.rs  discovery_commands.rs  dry_run_and_schema.rs  extract_pipeline.rs  output_flag.rs  record_replay.rs  scaffold_hello_world.rs  scaffold_nx_monorepo.rs  verify_command.rs
crates/usta-core/: Cargo.toml  README.md
crates/usta-core/src/: errors.rs  extract.rs  inject.rs  lib.rs  loaded.rs  paths.rs  plan.rs  project.rs  resolver.rs  snapshot.rs  template.rs
crates/usta-ports/: Cargo.toml  README.md
crates/usta-ports/src/: fs.rs  lib.rs  pkg_manager.rs  prompts.rs  repo_scanner.rs  sanitizer.rs  telemetry.rs  template_source.rs  vcs.rs
docs/: ARCHITECTURE.md  EXTRACT.md  NON_GOALS.md  TEMPLATE_AUTHORING.md
docs/ADR/: 0001-hexagonal-architecture.md  0002-single-crate-collapse.md
scripts/: check-agent-rules.sh  check-forbidden-imports.sh  check-layers.sh
src/: main.rs  wiring.rs
src/adapters/: clock.rs  fs.rs  mod.rs  pkg_manager.rs  renderer.rs  vcs.rs
src/adapters/prompts/: inquire_ui.rs  noninteractive.rs
src/adapters/scanner/: ignore_scanner.rs  mod.rs
src/adapters/templates/: filesystem_source.rs  mod.rs
src/app/: add.rs  list.rs  mod.rs  update.rs  verify.rs
src/app/extract/: mod.rs  service.rs  synthesizer.rs  writer.rs
src/app/scaffold/: mod.rs  plan_builder.rs  plan_executor.rs  service.rs  snapshot.rs
src/commands/: add.rs  completions.rs  doctor.rs  extract.rs  install.rs  list.rs  mod.rs  new.rs  schema.rs  search.rs  self_update.rs  update.rs  verify.rs
src/core/: extract.rs  inject.rs  loaded.rs  merge.rs  mod.rs  paths.rs  plan.rs  project.rs  resolver.rs  snapshot.rs  template.rs
src/ports/: clock.rs  fs.rs  mod.rs  renderer.rs  stack_detector.rs  template_source.rs
templates/hello-world/: template.toml
templates/hello-world/base/: .gitignore  AGENTS.md.j2  README.md.j2  index.js.j2  package.json.j2
templates/hello-world/features/greeting/files/: HELLO.txt.j2
templates/hello-world/features/license-mit/files/: LICENSE.j2
templates/hello-world/features/with-deps/merges/: package.json.merge.json
templates/hello-world/features/with-router/files/: router.js
templates/hello-world/features/with-router/injections/: index.js.inject.toml
templates/nx-monorepo/: template.toml
templates/nx-monorepo/base/: .gitignore  .prettierignore  AGENTS.md.j2  README.md.j2  eslint.config.js  nx.json  package.json.j2  tsconfig.base.json.j2
templates/nx-monorepo/features/api-auth-jwt/injections/apps/api/src/: main.py.inject.toml
templates/nx-monorepo/features/api-auth-jwt/merges/apps/api/: pyproject.toml.merge.toml
templates/nx-monorepo/features/api-fastapi/files/apps/api/: .dockerignore  Dockerfile  project.json.j2  pyproject.toml.j2
templates/nx-monorepo/features/api-fastapi/files/apps/api/src/: main.py.j2
templates/nx-monorepo/features/api-fastapi/files/apps/api/src/api/: __init__.py  dependencies.py
templates/nx-monorepo/features/api-fastapi/files/apps/api/src/application/: __init__.py
templates/nx-monorepo/features/api-mongodb/injections/apps/api/src/: main.py.inject.toml
templates/nx-monorepo/features/api-mongodb/merges/apps/api/: pyproject.toml.merge.toml
templates/nx-monorepo/features/docker/files/: docker-compose.yaml.j2
templates/nx-monorepo/features/docker/files/apps/web/: Dockerfile
templates/nx-monorepo/features/mobile-expo/files/apps/mobile/: App.tsx.j2  package.json.j2  project.json  tailwind.config.js  tsconfig.json
templates/nx-monorepo/features/shared-types/injections/: tsconfig.base.json.inject.toml
templates/nx-monorepo/features/shared-ui/injections/: tsconfig.base.json.inject.toml
templates/nx-monorepo/features/shared-utils/injections/: tsconfig.base.json.inject.toml
templates/nx-monorepo/features/tooling-husky/merges/: package.json.merge.json
templates/nx-monorepo/features/web-i18n/injections/apps/web/src/: main.tsx.inject.toml
templates/nx-monorepo/features/web-i18n/merges/apps/web/: package.json.merge.json
templates/nx-monorepo/features/web-router/injections/apps/web/src/: App.tsx.inject.toml  main.tsx.inject.toml
templates/nx-monorepo/features/web-tanstack-query/injections/apps/web/src/: main.tsx.inject.toml
templates/nx-monorepo/features/web-tanstack-query/merges/apps/web/: package.json.merge.json
templates/nx-monorepo/features/web-vite-react/files/apps/web/: package.json.j2  project.json  tsconfig.json  vite.config.ts
templates/nx-monorepo/features/web-vite-react/files/apps/web/src/: App.tsx.j2  main.tsx.j2
tests/: add_command.rs  discovery_commands.rs  dry_run_and_schema.rs  extract_pipeline.rs  output_flag.rs  post_scaffold.rs  record_replay.rs  scaffold_hello_world.rs  scaffold_nx_monorepo.rs  update_command.rs  verify_command.rs
(+14 files in other folders)
