[package]
name = "usta-adapters"
description = "Concrete adapter implementations for usta-cli ports."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
usta-core = { version = "0.1.0", path = "../usta-core" }
usta-ports = { version = "0.1.0", path = "../usta-ports" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Per-adapter deps (kept here, not leaked into core/ports/app).
inquire.workspace = true
minijinja.workspace = true
ignore.workspace = true
walkdir.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
