[package]
name = "usta-app"
description = "Use cases for usta-cli. Depends on core + ports only."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
usta-core = { version = "0.1.0", path = "../usta-core" }
usta-ports = { version = "0.1.0", path = "../usta-ports" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
toml.workspace = true
sha2.workspace = true
globset.workspace = true   # pure pattern matching, no I/O — safe in this layer

[dev-dependencies]
semver.workspace = true

# NOTE: this crate must not depend on usta-adapters. CI enforces it.

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
