[package]
name = "usta"
description = "Multi-stack project scaffolder with deterministic template extraction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords = ["scaffold", "template", "generator", "cli", "monorepo"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "usta"
path = "src/main.rs"

[dependencies]
usta-core = { path = "../usta-core" }
usta-ports = { path = "../usta-ports" }
usta-app = { path = "../usta-app" }
usta-adapters = { path = "../usta-adapters" }

anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
toml.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[lints.rust]
unsafe_code = "forbid"
