[package]
name = "usta-core"
description = "Domain types and rules for usta-cli. No I/O. No async."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
