[package]
name = "usta-ports"
description = "Trait definitions (ports) for usta-cli. No implementations, no I/O."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
usta-core = { path = "../usta-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
